--- a/Data-IA/dataIa.html
+++ b/Data-IA/dataIa.html
@@ -61,10 +61,10 @@
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
-                        <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
-                            data-bs-offset="10,20">
-                            Accueil
-                        </button>
+                        <a href="../accueil/accueil.html"><button type="button" class="menu-select " data-bs-toggle="dropdown"
+                                aria-expanded="false" data-bs-offset="10,20">
+                                Accueil
+                            </button></a>
                     </div>
                     <div class="nav-lit dropdown me-1">
                         <button type="button" class="menu-select  dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
