--- a/fondamentaux-numerique/fondamentaux-num.html
+++ b/fondamentaux-numerique/fondamentaux-num.html
@@ -33,7 +33,7 @@
 </head>
 <body>
       <!-- debut header -->
-      <!-- <header class="" id="header" class="">
+      <header class="" id="header" class="">
         <div class="header-top d-flex justify-content-between py-2">
             <div class="section-left d-flex">
                 <div class="media-element"><i class="fa-brands fa-facebook"></i></div>
@@ -61,10 +61,10 @@
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
-                        <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
-                            data-bs-offset="10,20">
-                            Accueil
-                        </button>
+                        <a href="../accueil/accueil.html"><button type="button" class="menu-select " data-bs-toggle="dropdown"
+                                aria-expanded="false" data-bs-offset="10,20">
+                                Accueil
+                            </button></a>
                     </div>
                     <div class="nav-lit dropdown me-1">
                         <button type="button" class="menu-select  dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
@@ -166,7 +166,7 @@
         </script>
         
     </header> -->
-    <!-- fin header -->
+    <!-- fin header
 
 
     <!-- début contenu -->
