--- a/accueil/accueil.html
+++ b/accueil/accueil.html
@@ -774,7 +774,7 @@
         <span id="progressValue"><i class="bi bi-arrow-up-square-fill"></i></span>
     </div>
     <!-- <header style="height: 70vh; background-color: #C30033;"></header> -->
-    <main style="height: 100vh; background-color: #F6F6F6;"></main>
+    <!-- <main style="height: 100vh; background-color: #F6F6F6;"></main> -->
     <!-- <footer style="height: 50vh; background-color: beige;"></footer> -->
     <script>
         let calcScrollValue = () => {
