--- a/metavers/metaverse.html
+++ b/metavers/metaverse.html
@@ -52,11 +52,11 @@
                             A Propos
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="../qui-sommes-nous/qsnous.html">Qui sommes nous ?</a></li>
-                            <li><a class="dropdown-item" href="../pedagogie/pedagogie.html">Notre pédagogie</a></li>
-                            <li><a class="dropdown-item" href="../">Notre réseau de fabriques</a></li>
-                            <li><a class="dropdown-item" href="../numerique-inclusif/numeriqueInclusif.html">Nos actions pour un numérique inclusif</a></li>
-                            <li><a class="dropdown-item" href="../anti-faq/antifaq.html">Anti-FAQ</a></li>
+                            <li><a class="dropdown-item" href="#">Qui sommes nous ?</a></li>
+                            <li><a class="dropdown-item" href="#">Notre pédagogie</a></li>
+                            <li><a class="dropdown-item" href="#">Notre réseau de fabriques</a></li>
+                            <li><a class="dropdown-item" href="#">Nos actions pour un numérique inclusif</a></li>
+                            <li><a class="dropdown-item" href="#">Anti-FAQ</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
@@ -65,13 +65,13 @@
                             Nos Formations
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="../infrastructure-cuberscurite/infraCyber.html">Infrastructures et cybersécurité</a></li>
+                            <li><a class="dropdown-item" href="#">Infrastructures et cybersécurité</a></li>
                             <li><a class="dropdown-item" href="#">Développement d'applications</a></li>
-                            <li><a class="dropdown-item" href="../fondamentaux-numerique/fondamentaux-num.html">Fondamentaux numériques</a></li>
-                            <li><a class="dropdown-item" href="../cloud-devops/cloud.html">Cloud & Devops</a></li>
-                            <li><a class="dropdown-item" href="../Data-IA/dataIa.html">Data & intelligence artificielle</a></li>
-                            <li><a class="dropdown-item" href="../metavers/metaverse.html">Métavers & XR</a></li>
-                            <li><a class="dropdown-item" href="../blockchain/blockchain.html">Blockchain</a></li>
+                            <li><a class="dropdown-item" href="#">Fondamentaux numériques</a></li>
+                            <li><a class="dropdown-item" href="#">Cloud & Devops</a></li>
+                            <li><a class="dropdown-item" href="#">Data & intelligence artificielle</a></li>
+                            <li><a class="dropdown-item" href="#">Métavers & XR</a></li>
+                            <li><a class="dropdown-item" href="#">Blockchain</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
@@ -80,7 +80,7 @@
                             Alternances
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="../formation-alternance/alternance.html">Faire ma formation en alternance</a></li>
+                            <li><a class="dropdown-item" href="#">Faire ma formation en alternance</a></li>
                             <li><a class="dropdown-item" href="#">Recruter en alternance</a></li>
                         </ul>
                     </div>
@@ -90,7 +90,7 @@
                             Candidats
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="../nos-actions-pour-les-femmes/actionfemme.html">Nos actions pour les femmes</a></li>
+                            <li><a class="dropdown-item" href="#">Nos actions pour les femmes</a></li>
                             <li><a class="dropdown-item" href="#">Personnes en situation de handicap</a></li>
                             <li><a class="dropdown-item" href="#">Nos actions pour les refugés étrangers</a></li>
                         </ul>
@@ -151,21 +151,21 @@
         <!-- <img src="https://extranet.adnov.fr/image/212/72e5aef45180ba51eb1518a1c9f52747.jpeg" alt=""> -->
     </main>
     <div class="action">
-        <h4>C'est quoi le Developpement d'application</h4>
+        <h4>C'est quoi le Metaverse Et XR</h4>
         <img src="../public/image/sim-removebg-preview (1).png" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ad delectus iusto
-         accusamus reprehenderit quos eum veritatis incidunt, fuga inventore et facilis animi 
-         fugit quidem nihil sapiente adipisci. Eius, molestiae  accusamus reprehenderit quos eum veritatis incidunt, fuga inventore et facilis animi 
-         fugit quidem nihil sapiente adipisci. Eius, molestiae.</p>
+        <p>Le metaverse (contraction de "méta" et "univers", c'est-à-dire méta-univers)
+           est un réseau d'environnements virtuels toujours actifs dans lequel de nombreuses
+           personnes peuvent interagir entre elles et avec ces objets numériques tout en exploitant
+           des représentations virtuelles - ou avatars- d'elles-mêmes.</p>
     </div>
-   <div class="text"><span>LeMtaverse offre 2 formation</span></div> 
+   <div class="text"><span>Le Metaverse  offre 2 formation</span></div> 
             <div class="container w-75 ml-2 mt-5">
    <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t4.ftcdn.net/jpg/06/50/73/03/360_F_650730346_66lBpF63H5EqxqSso2u3sRTBtf92XvxO.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Developeur euse Front-end</h5>
+          <h5 class="card-title">Technicien-ne d'assistance en Réalité Virtuelle</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <button>Decouvrir la Formation</button>
         </div>
@@ -173,10 +173,10 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQejpMbiRrru8Y9C9hqLtjTg3t1Jlr4sGOdvQ&usqp=CAU">
         <div class="card-body">
-          <h5 class="card-title">Concepteur-rice developpeur-euse d'application</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Technicien-ne d'assistance en Réalité Virtuelle/Réalité Augmenté -3D temps réeel</h5>
+          <p class="card-text">This is below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <button>Decouvrir la Formation</button>
         </div>
       </div>
@@ -342,7 +342,7 @@
                                 Pages
                             </h4>
                             <ul>
-                                <li><a href="../devenir-formateur/formateur.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-dot"
+                                <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-dot"
                                     viewBox="0 0 16 16">
                                     <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                 </svg>Devenir formateur</a></li>
@@ -350,7 +350,7 @@
                                         viewBox="0 0 16 16">
                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                     </svg>Rejoindre notre equipe</a></li>
-                                <li><a href=""><a href="../blog/blog.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-dot"
+                                <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-dot"
                                         viewBox="0 0 16 16">
                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                     </svg>Blog</a></li>
@@ -376,7 +376,7 @@
                                         viewBox="0 0 16 16">
                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                     </svg>Accessibilite</a></li>
-                                <li><a href=""><a href="../mentions-légales/metionlegale.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-dot"
+                                <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-dot"
                                         viewBox="0 0 16 16">
                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                     </svg>Mention legales</a></li>
