--- a/anti-faq/antifaq.html
+++ b/anti-faq/antifaq.html
@@ -63,10 +63,10 @@
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
-                        <a href="../accueil/accueil.html"><button type="button" class="menu-select " data-bs-toggle="dropdown"
-                                aria-expanded="false" data-bs-offset="10,20">
-                                Accueil
-                            </button></a>
+                        <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
+                            data-bs-offset="10,20">
+                            Accueil
+                        </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
                         <button type="button" class="menu-select  dropdown-toggle" data-bs-toggle="dropdown"
@@ -89,11 +89,15 @@
                             Nos Formations
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="../infrastructure-cuberscurite/infraCyber.html">Infrastructures et cybersécurité</a></li>
-                            <li><a class="dropdown-item" href="#">Développement d'applications</a></li>
-                            <li><a class="dropdown-item" href="../fondamentaux-numerique/fondamentaux-num.html">Fondamentaux numériques</a></li>
+                            <li><a class="dropdown-item"
+                                    href="../infrastructure-cuberscurite/infraCyber.html">Infrastructures et
+                                    cybersécurité</a></li>
+                            <li><a class="dropdown-item" href="../infrastructure-cuberscurite/">Développement
+                                    d'applications</a></li>
+                            <li><a class="dropdown-item" href="../fondamentaux-numerique/fondamentaux-num.html">Fondamentaux
+                                    numériques</a></li>
                             <li><a class="dropdown-item" href="../cloud-devops/cloud.html">Cloud & Devops</a></li>
-                            <li><a class="dropdown-item" href="../Data-IA/dataIa.html">Data & intelligence artificielle</a></li>
+                            <li><a class="dropdown-item" href="../Data-IA/">Data & intelligence artificielle</a></li>
                             <li><a class="dropdown-item" href="../metavers/metaverse.html">Métavers & XR</a></li>
                             <li><a class="dropdown-item" href="../blockchain/blockchain.html">Blockchain</a></li>
                         </ul>
@@ -104,7 +108,8 @@
                             Alternances
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="../formation-alternance/alternance.html">Faire ma formation en alternance</a></li>
+                            <li><a class="dropdown-item" href="../formation-alternance/alternance.html">Faire ma formation
+                                    en alternance</a></li>
                             <li><a class="dropdown-item" href="#">Recruter en alternance</a></li>
                         </ul>
                     </div>
@@ -197,7 +202,7 @@
                     <h2 class="accordion-header">
                         <button class="list-antifaq accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                            Simplon est elle la première et dernière formation en son genre
+                            Simplon est elle la première et dernière formation en son genre ?
                         </button>
                     </h2>
                     <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -255,41 +260,59 @@
                     <h2 class="accordion-header">
                         <button class="list-antifaq accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                            Simplon est elle la première et dernière formation en son genre
+                            Quelle est la difference entre simplon.co et 42 ?
                         </button>
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                            <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
-                            filled with some actual content.</div>
+                        <div class="accordion-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, corporis ipsa ea possimus maxime tempora ad minus quia accusamus repudiandae itaque pariatur deleniti? Ipsum dolor voluptates, recusandae assumenda natus optio.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quisquam nisi sed iure, aliquam laborum odit temporibus deserunt quo necessitatibus, provident repudiandae earum vel ut consectetur est quia labore dolorum?</p>
+                        </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="list-antifaq accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                            Simplon est elle la première et dernière formation en son genre
+                            Simplon.co, les eoles d'informatiques, les informaticiens.
                         </button>
                     </h2>
                     <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                            <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                            happening here in terms of content, but just filling up the space to make it look, at least at first
-                            glance, a bit more representative of how this would look in a real-world application.</div>
+                        <div class="accordion-body">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus nisi hic error molestiae eius sunt nulla dolorem eos veniam laudantium. Doloremque corporis nulla non architecto velit similique, et exercitationem officia.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur amet harum libero assumenda odit pariatur, placeat porro officiis eaque quos repudiandae, eveniet totam, earum inventore. Hic nesciunt incidunt facere quas!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet mollitia enim, labore dicta corrupti odit iste voluptatibus quibusdam non ad corporis quae ipsam molestias recusandae voluptate nisi. Sit, modi est
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, quidem incidunt consequatur fuga beatae debitis. Tempore, nisi, blanditiis voluptatibus veritatis ipsa consectetur sequi quis soluta, fugiat ea sit recusandae voluptatem?
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex nemo nulla eos quo, consequuntur consectetur, mollitia quos laborum minima ea minus molestias dolor fugit error repudiandae quaerat aperiam ad placeat.
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="list-antifaq accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                            Simplon est elle la première et dernière formation en son genre
+                            Simplon.co une organisation militante et partisane
                         </button>
                     </h2>
                     <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                            <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                            happening here in terms of content, but just filling up the space to make it look, at least at first
-                            glance, a bit more representative of how this would look in a real-world application.
+                        <div class="accordion-body">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus nisi hic error molestiae eius sunt nulla dolorem
+                                eos veniam laudantium. Doloremque corporis nulla non architecto velit similique, et exercitationem officia.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur amet harum libero assumenda odit pariatur, placeat
+                                porro officiis eaque quos repudiandae, eveniet totam, earum inventore. Hic nesciunt incidunt facere quas!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet mollitia enim, labore dicta corrupti odit iste
+                                voluptatibus quibusdam non ad corporis quae ipsam molestias recusandae voluptate nisi. Sit, modi est
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, quidem incidunt consequatur fuga beatae
+                                debitis. Tempore, nisi, blanditiis voluptatibus veritatis ipsa consectetur sequi quis soluta, fugiat ea sit
+                                recusandae voluptatem?
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex nemo nulla eos quo, consequuntur consectetur, mollitia
+                                quos laborum minima ea minus molestias dolor fugit error repudiandae quaerat aperiam ad placeat.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -297,14 +320,25 @@
                     <h2 class="accordion-header">
                         <button class="list-antifaq accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                            Simplon est elle la première et dernière formation en son genre
+                            Simplon.co s'assaime comme une franchise 
                         </button>
                     </h2>
                     <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                            <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                            happening here in terms of content, but just filling up the space to make it look, at least at first
-                            glance, a bit more representative of how this would look in a real-world application.
+                        <div class="accordion-body">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus nisi hic error molestiae eius sunt nulla dolorem
+                                eos veniam laudantium. Doloremque corporis nulla non architecto velit similique, et exercitationem officia.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur amet harum libero assumenda odit pariatur, placeat
+                                porro officiis eaque quos repudiandae, eveniet totam, earum inventore. Hic nesciunt incidunt facere quas!
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet mollitia enim, labore dicta corrupti odit iste
+                                voluptatibus quibusdam non ad corporis quae ipsam molestias recusandae voluptate nisi. Sit, modi est
+                            </p>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, quidem incidunt consequatur fuga beatae
+                                debitis. Tempore, nisi, blanditiis voluptatibus veritatis ipsa consectetur sequi quis soluta, fugiat ea sit
+                                recusandae voluptatem?
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex nemo nulla eos quo, consequuntur consectetur, mollitia
+                                quos laborum minima ea minus molestias dolor fugit error repudiandae quaerat aperiam ad placeat.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -342,7 +376,7 @@
                                         Pages
                                     </h4>
                                     <ul class="foot-ul">
-                                        <li><a href="../devenir-formateur/formateur.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                        <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                                     fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                     <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                 </svg>Devenir formateur</a></li>
@@ -350,7 +384,7 @@
                                                         fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Rejoindre notre equipe</a></li>
-                                        <li><a href=""><a href="../blog/blog.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                        <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                                         fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Blog</a></li>
@@ -376,7 +410,7 @@
                                                         fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Accessibilite</a></li>
-                                        <li><a href=""><a href="../mentions-légales/metionlegale.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                        <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                                         fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Mention legales</a></li>
