modifications de l'atelier

--- a/formation-alternance/alternance.html
+++ b/formation-alternance/alternance.html
@@ -199,7 +199,7 @@
                 <p>
                     Vous souhaitez faire évoluer votre carrière professionnelle en <br>vous formant à un métier du numérique ? Découvrez une de nos <br>30 formations en alternance.
                     À distance ou en présentiel, nos <br>formations allient théorie et pratique pour vous permettre <br>de monter rapidement en compétences.</p>
-                <button>Trouver ma formation</button>
+                <button><a href="#alternance-content-two" style="color: white;">Trouver ma formation</a></button>
             </div>
             <div class="alternance-content-right">
                 <div class="alternance-titre-right" ><p>AVEC NOS FORMATIONS EN ALTERNANCE</p></div>
@@ -230,12 +230,12 @@
                 </div>
             </div>
         </div>
-        <div class="alternance-content-two">
+        <div class="alternance-content-two" id="alternance-content-two">
             <h3>Découvrez toutes nos formations en alternance</h3>
             <div class="d-flex justify-content-center gap-4 p-2" id="alternance-content-two-carte">
                 <div class="card alternance-content-two-item" style="width: 33rem;">
                     <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/11.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body" id="bdy-alternance">
                       <h5 class="card-title">ADMINISTRATEUR D'INFRASTRUCTURES SECURISEES DEVOPS</h5>
                       <p class="card-text">L'administrateur d'infrastructures sécurisées s’occupe des infrastructures informatiques dont il assure l'installation, la sécurisation...</p>
                       <div class="alternance-card-item">
@@ -255,7 +255,7 @@
                 </div>
                 <div class="card alternance-content-two-item" style="width: 33rem;">
                     <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/9.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body" id="bdy-alternance">
                       <h5 class="card-title">Concepteur-rice Développeur-se en environnement DevOps</h5>
                       <p class="card-text">Le Concepteur Développeur d'Applications est un professionnel qui analyse les besoins d'un client, les traduit en exigences fonctionnelles et...</p>
                       <div>
@@ -275,7 +275,7 @@
             <div class="d-flex justify-content-center gap-4 p-2" id="alternance-content-two-carte">
                 <div class="card alternance-content-two-item" style="width: 33rem;">
                     <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/5-1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body" id="bdy-alternance">
                       <h5 class="card-title">TECHNICIEN-NE SUPERIEUR-E SYSTEME ET RESEAUX</h5>
                       <p class="card-text">Le technicien supérieur systèmes et réseaux participe à la mise en service et au maintien en condition opérationnelle de l’infrastructure informatique. </p>
                       <div class="alternance-card-item">
@@ -295,7 +295,7 @@
                 </div>
                 <div class="card alternance-content-two-item" style="width: 33rem;">
                     <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body" id="bdy-alternance">
                       <h5 class="card-title">PARCOURS DEVELOPPEUR EN INTELLIGENCE ARTIFICIELLE</h5>
                       <p class="card-text">L'IA est en réalité une discipline qui réunit des sciences, théories et techniques Le métier de développeur en IA prend une importance croissante dans les nouveaux métiers de la data et l’IA puisqu'il..</p>
                       <div>
@@ -315,7 +315,7 @@
             <div class="d-flex justify-content-center gap-4 p-2" id="alternance-content-two-carte">
                 <div class="card alternance-content-two-item" style="width: 33rem;">
                     <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/4.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body" id="bdy-alternance">
                       <h5 class="card-title">PARCOURS ADMISNISTRATEUR-RICE CLOUD</h5>
                       <p class="card-text">Le parcours Administrateur-trice Cloud est une formation qui permet d'acquérir les compétences nécessaires pour administrer et garantir l'administration, la mise en place et l'exploitation des infrastructures Cloud...</p>
                       <div class="alternance-card-item">
@@ -335,7 +335,7 @@
                 </div>
                 <div class="card alternance-content-two-item" style="width: 33rem;">
                     <img src="https://campagne.simplon.co/hubfs/Photos%20Free%20apprenants/11.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body" id="bdy-alternance">
                       <h5 class="card-title">OPERATEUR-RICE DE SOLUTIONS DE SECURITE CLOUD ET HYBRIDE</h5>
                       <p class="card-text">Le Concepteur Développeur d'Applications est un professionnel qui analyse les besoins d'un client, les traduit en exigences fonctionnelles et...</p>
                       <div>
